[gd_scene load_steps=7 format=3 uid="uid://c0f0h24u7wfrh"]

[ext_resource type="Texture2D" uid="uid://b8a1xfqe1gfp5" path="res://main_window/top_bar/search_bar/images/search.svg" id="1_1sgf3"]
[ext_resource type="Script" uid="uid://c7d816d5w87db" path="res://main_window/top_bar/search_bar/search_bar.gd" id="1_6r0fp"]
[ext_resource type="Script" uid="uid://bqai4pv020yjf" path="res://custom/tooltip.gd" id="3_s4ac0"]
[ext_resource type="Texture2D" uid="uid://co5vijl2yrjym" path="res://main_window/top_bar/search_bar/images/space_icon.svg" id="4_4yfrf"]
[ext_resource type="Script" uid="uid://83f0corx6jnk" path="res://custom/better_text_edit.gd" id="5_4yfrf"]
[ext_resource type="Texture2D" uid="uid://3hdtixbh74in" path="res://main_window/top_bar/search_bar/images/close.svg" id="5_y3i4g"]

[node name="SearchBar" type="PanelContainer"]
offset_right = 215.0
offset_bottom = 28.0
size_flags_horizontal = 3
mouse_default_cursor_shape = 1
theme_type_variation = &"SearchBar"
script = ExtResource("1_6r0fp")

[node name="HBox" type="HBoxContainer" parent="."]
layout_mode = 2
theme_type_variation = &"SmallSeparation"
alignment = 1

[node name="Icon" type="Button" parent="HBox"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
mouse_filter = 1
mouse_default_cursor_shape = 2
theme_type_variation = &"FlatButton"
icon = ExtResource("1_1sgf3")
flat = true

[node name="Tooltip" type="Node" parent="HBox/Icon"]
script = ExtResource("3_s4ac0")
text = "Search"
popup_position = 4
gap_width = 12

[node name="SearchQuery" type="TextEdit" parent="HBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(118, 0)
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme_type_variation = &"LineEdit_Minimal"
theme_override_constants/line_spacing = 0
theme_override_icons/space = ExtResource("4_4yfrf")
placeholder_text = "Search To-Dos..."
context_menu_enabled = false
caret_blink = true
caret_blink_interval = 0.45
caret_multiple = false
script = ExtResource("5_4yfrf")
all_in_one_line = true
metadata/_custom_type_script = "uid://83f0corx6jnk"

[node name="DebounceTimer" type="Timer" parent="HBox/SearchQuery"]
wait_time = 0.2
one_shot = true

[node name="ShortcutHint" type="Button" parent="HBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
focus_mode = 0
mouse_filter = 2
theme_type_variation = &"SearchBar_ShortcutHint"
text = "CTRL + F"

[node name="GlobalSearchHint" type="HBoxContainer" parent="HBox"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 2

[node name="ShortcutHint" type="Button" parent="HBox/GlobalSearchHint"]
layout_mode = 2
size_flags_vertical = 4
focus_mode = 0
mouse_filter = 2
theme_type_variation = &"SearchBar_ShortcutHint"
text = "SHIFT + ENTER"

[node name="Label" type="RichTextLabel" parent="HBox/GlobalSearchHint"]
layout_mode = 2
mouse_filter = 2
theme_override_font_sizes/bold_italics_font_size = 11
theme_override_font_sizes/italics_font_size = 11
bbcode_enabled = true
text = "[i]to search [b]all[/b] to-dos[/i]"
fit_content = true
autowrap_mode = 0
vertical_alignment = 1

[node name="CloseButton" type="Button" parent="HBox"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
mouse_filter = 1
mouse_default_cursor_shape = 2
theme_type_variation = &"FlatButton"
icon = ExtResource("5_y3i4g")
flat = true

[node name="Tooltip" type="Node" parent="HBox/CloseButton"]
script = ExtResource("3_s4ac0")
text = "Clear Search"
popup_position = 5
